Implement company status admin flow (#15)
